--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,13 @@ dependencies = [
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ['flaskr']
+
+[tool.pytest.ini_options]
+testpaths = ['tests']
+
+[tool.coverage.run]
+branch = true
+source = ['flaskr']
